--- a/composeApp/src/androidMain/res/drawable/tv.xml
+++ b/composeApp/src/androidMain/res/drawable/tv.xml
@@ -4,7 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:pathData="m440,119.32v517.95L216,399.04 160,459.66 480,800 800,459.66 744,399.04 520,637.28v-517.95z"
-      android:strokeWidth="1.03129"
+      android:pathData="M320,840v-80L160,760q-33,0 -56.5,-23.5T80,680v-480q0,-33 23.5,-56.5T160,120h640q33,0 56.5,23.5T880,200v480q0,33 -23.5,56.5T800,760L640,760v80L320,840ZM160,680h640v-480L160,200v480ZM160,680v-480,480Z"
       android:fillColor="#000000"/>
 </vector>
